--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.4",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
