--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@serwist/next": "^9.0.2",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
